--- a/qbcore.yaml
+++ b/qbcore.yaml
@@ -149,11 +149,6 @@ tasks:
     seconds: 10
 
   - action: download_github
-    dest: ./resources/[qb]/qb-customs
-    ref: main
-    src: https://github.com/qbcore-framework/qb-customs
-
-  - action: download_github
     dest: ./resources/[qb]/qb-vehiclesales
     ref: main
     src: https://github.com/qbcore-framework/qb-vehiclesales
@@ -467,6 +462,11 @@ tasks:
     dest: ./resources/[qb]/qb-core
     ref: main
     src: https://github.com/CPRP/qb-core
+
+  - action: download_github
+    dest: ./resources/[qb]/qb-customs
+    ref: main
+    src: https://github.com/CPRP/qb-customs
 
   # Clean up
   - action: remove_path
