--- a/qbcore.yaml
+++ b/qbcore.yaml
@@ -209,11 +209,6 @@ tasks:
     src: https://github.com/qbcore-framework/qb-garages
 
   - action: download_github
-    dest: ./resources/[qb]/qb-ambulancejob
-    ref: main
-    src: https://github.com/qbcore-framework/qb-ambulancejob
-
-  - action: download_github
     dest: ./resources/[qb]/qb-vehiclefailure
     ref: main
     src: https://github.com/qbcore-framework/qb-vehiclefailure
@@ -225,11 +220,6 @@ tasks:
     dest: ./resources/[qb]/qb-radialmenu
     ref: main
     src: https://github.com/qbcore-framework/qb-radialmenu
-
-  - action: download_github
-    dest: ./resources/[qb]/qb-crypto
-    ref: main
-    src: https://github.com/qbcore-framework/qb-crypto
 
   - action: download_github
     dest: ./resources/[qb]/qb-weathersync
@@ -327,11 +317,6 @@ tasks:
     src: https://github.com/qbcore-framework/qb-diving
 
   - action: download_github
-    dest: ./resources/[qb]/qb-cityhall
-    ref: main
-    src: https://github.com/qbcore-framework/qb-cityhall
-
-  - action: download_github
     dest: ./resources/[qb]/qb-anticheat
     ref: main
     src: https://github.com/qbcore-framework/qb-anticheat
@@ -410,19 +395,9 @@ tasks:
     src: https://github.com/qbcore-framework/qb-hotdogjob
 
   - action: download_github
-    dest: ./resources/[qb]/qb-doorlock
-    ref: main
-    src: https://github.com/qbcore-framework/qb-doorlock
-
-  - action: download_github
     dest: ./resources/[qb]/qb-garbagejob
     ref: main
     src: https://github.com/qbcore-framework/qb-garbagejob
-
-  - action: download_github
-    dest: ./resources/[qb]/qb-drugs
-    ref: main
-    src: https://github.com/qbcore-framework/qb-drugs
 
   - action: download_github
     dest: ./resources/[qb]/qb-shops
@@ -467,6 +442,31 @@ tasks:
     dest: ./resources/[qb]/qb-customs
     ref: main
     src: https://github.com/CPRP/qb-customs
+
+  - action: download_github
+    dest: ./resources/[qb]/qb-ambulancejob
+    ref: main
+    src: https://github.com/CPRP/qb-ambulancejob
+
+  - action: download_github
+    dest: ./resources/[qb]/qb-cityhall
+    ref: main
+    src: https://github.com/CPRP/qb-cityhall
+
+  - action: download_github
+    dest: ./resources/[qb]/qb-crypto
+    ref: main
+    src: https://github.com/CPRP/qb-crypto
+
+  - action: download_github
+    dest: ./resources/[qb]/qb-doorlock
+    ref: main
+    src: https://github.com/CPRP/qb-doorlock
+
+  - action: download_github
+    dest: ./resources/[qb]/qb-drugs
+    ref: main
+    src: https://github.com/CPRP/qb-drugs
 
   # Clean up
   - action: remove_path
