Added qb-rentals and qb-hud

--- a/qbcore.yaml
+++ b/qbcore.yaml
@@ -152,11 +152,6 @@ tasks:
     dest: ./resources/[qb]/qb-atms
     ref: main
     src: https://github.com/qbcore-framework/qb-atms
-    
-  - action: download_github
-    dest: ./resources/[qb]/qb-hud
-    ref: main
-    src: https://github.com/qbcore-framework/qb-hud
 
   - action: download_github
     dest: ./resources/[qb]/qb-weed
@@ -535,6 +530,16 @@ tasks:
     dest: ./resources/[qb]/qb-bankrobbery
     ref: main
     src: https://github.com/CPRP/qb-bankrobbery
+    
+  - action: download_github
+    dest: ./resources/[qb]/qb-hud
+    ref: main
+    src: https://github.com/CPRP/qb-hud
+    
+  - action: download_github
+    dest: ./resources/[qb]/qb-rentals
+    ref: main
+    src: https://github.com/CPRP/qb-rentals
 
   # Clean up
   - action: remove_path
