Added qb-mailjob and qb-rentals

--- a/qbcore.yaml
+++ b/qbcore.yaml
@@ -525,6 +525,16 @@ tasks:
     dest: ./resources/[qb]/qb-hud
     ref: main
     src: https://github.com/CPRP/qb-hud
+    
+ - action: download_github
+    dest: ./resources/[qb]/qb-rentals
+    ref: main
+    src: https://github.com/CPRP/qb-rentals
+    
+- action: download_github
+    dest: ./resources/[qb]/qb-mailjob
+    ref: main
+    src: https://github.com/CPRP/qb-mailjob
 
   # Clean up
   - action: remove_path
