--- a/qbcore.yaml
+++ b/qbcore.yaml
@@ -574,6 +574,11 @@ tasks:
     dest: ./resources/[qb]/qb-weapons
     ref: main
     src: https://github.com/CPRP/qb-weapons
+    
+  - action: download_github
+    dest: ./resources/[standalone]/ps-drugprocessing
+    ref: main
+    src: https://github.com/CPRP/ps-drugprocessing
 
   # Clean up
   - action: remove_path
