--- a/qbcore.yaml
+++ b/qbcore.yaml
@@ -547,7 +547,7 @@ tasks:
     src: https://github.com/CPRP/qb-drivingschool
 
   - action: download_github
-    dest: ./resources/[qb]/qb_k9
+    dest: ./resources/[qb]/qb-k9
     ref: main
     src: https://github.com/CPRP/hashx_k9
  
