--- a/qbcore.yaml
+++ b/qbcore.yaml
@@ -579,6 +579,11 @@ tasks:
     dest: ./resources/[qb]/qb-truckrobbery
     ref: main
     src: https://github.com/CPRP/qb-truckrobbery
+    
+  - action: download_github
+    dest: ./resources/[standalone]/3dme
+    ref: main
+    src: https://github.com/CPRP/3dme
 
   # Clean up
   - action: remove_path
