--- a/qbcore.yaml
+++ b/qbcore.yaml
@@ -574,6 +574,11 @@ tasks:
     dest: ./resources/[qb]/qb-scoreboard
     ref: main
     src: https://github.com/CPRP/qb-scoreboard
+    
+  - action: download_github
+    dest: ./resources/[qb]/qb-tattooshop
+    ref: main
+    src: https://github.com/CPRP/qb-tattooshop
 
   # Clean up
   - action: remove_path
