--- a/server.cfg
+++ b/server.cfg
@@ -18,7 +18,7 @@ sets sv_projectName "[{{recipeName}}] {{serverName}}"
 sets sv_projectDesc "{{recipeDescription}}"
 sets locale "en-US" 
 load_server_icon myLogo.png
-set sv_enforceGameBuild 2372
+set sv_enforceGameBuild 2545
 set mysql_connection_string "{{dbConnectionString}}"
 
 # Voice config
@@ -43,6 +43,7 @@ ensure sessionmanager
 ensure basic-gamemode
 ensure hardcap
 ensure baseevents
+ensure sound
 
 # QBCore & Extra stuff
 ensure qb-core
@@ -50,6 +51,22 @@ ensure [qb]
 ensure [standalone]
 ensure [voice]
 ensure [defaultmaps]
+ensure cfx-gabz-mapdata
+ensure cfx-gabz-pdprops
+ensure [cfx-gabz-maps]
+ensure [maps]
+ensure [peds]
+ensure [qbs]
+ensure [standalones]
+ensure [eup]
+ensure [vehicles]
+ensure [casino]
+ensure [daveandbusters]
+ensure [weapons]
+ensure [engine]
+
+ensure screenshot-basic
+ensure VersusAC
 
 ## Permissions ##
 add_ace group.admin command allow # allow all commands
@@ -61,6 +78,16 @@ add_ace resource.qb-core command allow # Allow qb-core to execute commands
 
 # Gods
 add_ace qbcore.god command allow # Allow all commands
+add_ace qbcore.admin command allow # Allow Admins to All Commands
+
+# Hypnonema
+add_ace group.admin hypnonema allow
+add_ace group.god hypnonema allow
+add_ace builtin.everyone hypnonema.playback allow
+
+# VersusAC
+add_ace group.admin vacadmin allow
+add_ace group.mod vacadmin allow
 
 # Inheritance
 add_principal qbcore.god group.admin # Allow gods access to the main admin group used to get all default permissions
@@ -72,16 +99,3 @@ add_principal qbcore.admin qbcore.mod # Allow admins access to mod commands
 
 # enable OneSync (required for server-side state awareness)
 set onesync on
-
-# Game Build
-set sv_enforceGameBuild 2545
-
-# Server player slot limit (see https://fivem.net/server-hosting for limits)
-sv_maxclients 48
-
-# Steam Web API key, if you want to use Steam authentication (https://steamcommunity.com/dev/apikey)
-# -> replace "" with the key
-set steam_webApiKey "none"
-
-# License key for your server (https://keymaster.fivem.net)
-sv_licenseKey "{{svLicense}}"
