--- a/server.cfg
+++ b/server.cfg
@@ -53,18 +53,20 @@ ensure [voice]
 ensure [defaultmaps]
 ensure cfx-gabz-mapdata
 ensure cfx-gabz-pdprops
-ensure [cfx-gabz-maps]
 ensure [maps]
 ensure [peds]
-ensure [qbs]
+ensure [paid]
 ensure [standalones]
-ensure [eup]
 ensure [vehicles]
 ensure [casino]
-ensure [daveandbusters]
 ensure [weapons]
+ensure [eup]
+## ensure [busclothing]
+## ensure [clothing]
+ensure [cfx-gabz-maps]
 ensure [engine]
 
+ensure jim-mechanic
 ensure screenshot-basic
 ensure VersusAC
 
