--- a/qbcore.yaml
+++ b/qbcore.yaml
@@ -547,7 +547,7 @@ tasks:
     
   - action: download_github
     dest: ./resources/[qb]/ps-fuel
-    ref: master
+    ref: main
     src: https://github.com/CPRP/ps-fuel
     
   - action: download_github
