--- a/server.cfg
+++ b/server.cfg
@@ -53,18 +53,20 @@ ensure [voice]
 ensure [defaultmaps]
 ensure cfx-gabz-mapdata
 ensure cfx-gabz-pdprops
+ensure cfx-gabz-scenarios
 ensure [maps]
 ensure [peds]
 ensure [paid]
 ensure [standalones]
+ensure [engine]
 ensure [vehicles]
 ensure [casino]
 ensure [weapons]
-ensure [eup]
+## ensure [eup]
 ## ensure [busclothing]
-## ensure [clothing]
+ensure [clothing]
+ensure [gnstudio]
 ensure [cfx-gabz-maps]
-ensure [engine]
 
 ensure jim-mechanic
 ensure screenshot-basic
