added Allows VersusAC

--- a/server.cfg
+++ b/server.cfg
@@ -79,6 +79,7 @@ add_ace group.admin command allow # allow all commands
 
 # Resources
 add_ace resource.qb-core command allow # Allow qb-core to execute commands
+add_ace resource.CPRPGoods command allow # Allows VersusAC
 
 # Gods
 add_ace qbcore.god command allow # Allow all commands
