--- a/qbcore.yaml
+++ b/qbcore.yaml
@@ -167,11 +167,6 @@ tasks:
     src: https://github.com/qbcore-framework/qb-scrapyard
 
   - action: download_github
-    dest: ./resources/[qb]/qb-tunerchip
-    ref: main
-    src: https://github.com/qbcore-framework/qb-tunerchip
-
-  - action: download_github
     dest: ./resources/[qb]/qb-streetraces
     ref: main
     src: https://github.com/qbcore-framework/qb-streetraces
@@ -642,6 +637,11 @@ tasks:
     dest: ./resources/[standalone]/Stretcher-Script
     ref: master
     src: https://github.com/CPRP/Stretcher-Script
+    
+  - action: download_github
+    dest: ./resources/[qb]/qb-tunerchip
+    ref: main
+    src: https://github.com/CPRP/qb-tunerchip
 
   # Clean up
   - action: remove_path
